# TrustECG

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
checkpoints/: model_config.json  trustecg_model.pt
docs/: ARCHITECTURE.md  api-reference.md  dashboard.md  data-pipeline.md  explainability.md  getting-started.md  index.md  training.md
notebooks/: TrustECG_Notebook.ipynb  best_model.pt
reports/: TrustECG Report.docx  TrustECG_Report.docx
src/app/: streamlit_app.py
