[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustecg"
version = "0.1.0"
description = "TrustECG: Explainable Multi-Label ECG Classification with Attention-Based Interpretability"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Byte2Beat Team" }
]
keywords = ["ecg", "deep-learning", "explainability", "medical-ai", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "torchmetrics>=1.2.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "wfdb>=4.1.0",
    "scikit-learn>=1.3.0",
    
    # Explainability
    "shap>=0.43.0",
    "lime>=0.2.0.1",
    "captum>=0.7.0",
    
    # Visualization
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    
    # Streamlit App
    "streamlit>=1.29.0",
    "streamlit-plotly-events>=0.0.6",
    "streamlit-extras>=0.3.5",
    
    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "umap-learn>=0.5.5",
]

[project.scripts]
trustecg-train = "src.training.trainer:main"
trustecg-app = "src.app.streamlit_app:main"

[project.urls]
Repository = "https://github.com/byte2beat/trustecg"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
